@@ -1,5 +1,6 @@
 # $XdotOrg: app/xdm/greeter/Makefile.am,v $
 
+if DYNAMIC_GREETER
 xdmlibdir = $(XDMLIBDIR)
 
 xdmlib_LTLIBRARIES = libXdmGreet.la
@@ -14,3 +15,4 @@ libXdmGreet_la_LIBADD = $(XDMGREET_LIBS)
 AM_CFLAGS = $(XDMGREET_CFLAGS) -I$(top_srcdir)
 
 libXdmGreet_la_LDFLAGS = -module -avoid-version
+endif
